# poetry-feature-request

./: README.md  pyproject.toml
awesome-lib/: README.md  pyproject.toml
awesome-lib/awesome_lib/: __init__.py
awesome_package/: __init__.py
