[tool.poetry]
name = "awesome-package"
version = "0.1.0"
description = "Illustration"
authors = ["Erik De Smedt <edesmedt@blockstream.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
awesome_lib = {path = "./awesome-lib", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
