[tool.poetry]
name = "awesome-lib"
version = "0.1.0"
description = "An awesome library using requests"
authors = ["Erik De Smedt <edesmedt@blockstream.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.0.0"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
